--- a/app/src/main/res/layout/activity_category_menu.xml
+++ b/app/src/main/res/layout/activity_category_menu.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_toLeftOf="@+id/ll_category_menu_bar"
+        android:layout_alignParentStart="true"
+        android:orientation="horizontal"
+        android:id="@+id/ll_category_menu_bar_no"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"></LinearLayout>
 
     //메뉴바
     <LinearLayout
+
         android:id="@+id/ll_category_menu_bar"
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
         android:background="#ffffff"
         android:orientation="vertical">
 
@@ -28,9 +36,9 @@
                 android:background="#ffffff"
                 android:layout_marginStart="10dp"
                 android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_close_black_24dp" />
+                android:layout_width="21dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/back_btn" />
 
 
             <TextView
@@ -43,7 +51,7 @@
                 android:text="CATEGORY"
                 android:textStyle="bold"
                 android:textColor="#040404"
-                android:textSize="13sp" />
+                android:textSize="16sp" />
         </RelativeLayout>
 
 
@@ -94,6 +102,7 @@
                     android:background="#ffffff">
 
                     <ImageView
+                        android:src="@drawable/ic_question_minsize"
                         android:id="@+id/iv_category_menu_question_icon"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
@@ -102,7 +111,7 @@
                         android:background="#ffffff" />
 
                     <TextView
-                        android:layout_marginTop="6.5dp"
+                        android:layout_marginTop="8.2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/iv_category_menu_question_icon"
@@ -138,6 +147,7 @@
                         android:id="@+id/iv_category_menu_inspiration_icon"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
+                        android:src="@drawable/ic_insight_minsize"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:background="#ffffff" />
@@ -177,9 +187,10 @@
                     android:background="#ffffff">
 
                     <ImageView
+                        android:src="@drawable/ic_cowork_minsize"
                         android:id="@+id/iv_category_menu_collaboration_icon"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="38dp"
+                        android:layout_height="35dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:background="#ffffff"/>
@@ -233,8 +244,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff"/>
 
                     <TextView
                         android:layout_marginTop="6.5dp"
@@ -246,7 +256,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -276,8 +286,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff" />
 
                     <TextView
                         android:layout_marginTop="6.5dp"
@@ -289,7 +298,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -319,8 +328,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff" />
 
                     <TextView
                         android:layout_marginTop="6.5dp"
@@ -332,7 +340,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -371,8 +379,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff" />
 
                     <TextView
                         android:layout_marginTop="6.5dp"
@@ -384,7 +391,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -414,8 +421,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff" />
 
                     <TextView
                         android:layout_marginTop="6.5dp"
@@ -427,7 +433,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -458,8 +464,7 @@
                         android:layout_height="40dp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="#ffffff"
-                        android:src="@drawable/ic_face_black_24dp" />
+                        android:background="#ffffff"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -471,7 +476,7 @@
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="0sp"
                         android:text="샘플"
-                        android:textColor="#999999"
+                        android:textColor="#FFFFFF"
                         android:textSize="12sp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -486,6 +491,9 @@
 
 
     </LinearLayout>//메뉴바
+
+
+
 
 
 </RelativeLayout>
