--- a/app/src/main/res/layout/activity_profile_setting_menu.xml
+++ b/app/src/main/res/layout/activity_profile_setting_menu.xml
@@ -3,6 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_toLeftOf="@+id/ll_category_menu_bar"
+        android:layout_alignParentStart="true"
+        android:orientation="horizontal"
+        android:id="@+id/ll_setting_menu_bar_no"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"></LinearLayout>
+
     //메뉴바
 
     <LinearLayout
