--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
         android:textSize="14dp"
         android:layout_width="210dp"
         android:layout_height="50dp"
-        android:text="dlfb77@gmail.com"/>
+        android:text="ywooo21@gmail.com"/>
     </LinearLayout>
     <LinearLayout
         android:layout_gravity="center"
@@ -77,7 +77,7 @@
             android:layout_width="210dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
-            android:text="rla12345"/>
+            android:text="1234567"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_login_login_button"
